dt-assets/scss/_details.scss
/* ... */
/**
Groups
**/

.group-progress-button-wrapper {
    text-align: center;
    flex: 1 0 80px;
}

.group-progress-button {
    text-align:center;
    padding:10px;
    background-color:$primary-color;
    border-radius:5px;
    height:60px;
    width:65px;
    opacity: 0.5;
}


.members-section {
    border: 1px solid #ccc;
    #empty-members-list-message {
        padding: 10px 10px;
    }
    .member-row {
        padding: 10px 10px;
        display: flex;
        &:hover {
            background-color: rgba(204, 204, 204, 0.5);
        }
        .member-row-actions {
            margin: 0;
            padding: 0 5px;
            color: grey;
        }
        i {
            padding: 0 2px;
        }
        .dt-icon {
            vertical-align: text-top;
            margin-right: 5px;
        }
    }
}
.members-header {
    button {
        height: 36px;
        width: max-content;
        border: 1px solid #ccc;
        vertical-align: bottom;
        border-bottom: 2px solid white;
        margin-bottom: -1px;
        padding: 5px 10px;
        img {
            margin-left: 2px;
        }
    }
}



.detail-notification-box {
    border: none;
    color: white;
    text-align: center;
    h4 {
        font-weight: bold;
    }
    img {
        margin: 0 10px;
    }
}

.accept-contact .bordered-box{
    background-color: #3F729B;
    .accept-button {
        background-color: #4CAF50;
    }
    .decline-button {
        background-color: #F43636;
    }
    .button {
        margin: 0 10px;
    }
}

select.color-select {
    color: white;
    font-weight: bold;
    border-radius: 10px;
    option {
        background-color: white;
        color: black;
    }
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 32,0 16,24' style='fill: white;stroke:black;stroke-width:1;'></polygon></svg>");
    text-shadow: rgba(0, 0, 0, 0.45) 0 0 6px;
}



.bordered-box{
    .grid-margin-y .cell {
        margin-block-start: 0;
        margin-block-end: 0.66rem;
    }
    .section-header {
        display: flex;
    }
    .section-chevron {
        margin-inline-start:auto;
        margin-inline-end:0;
        img {
            vertical-align: middle; width:20px
        }
    }
    .chevron_down {
        display: none;
    }
    .section-body {
        display: flex;
        flex-direction: column;
        gap: 0.5rem;
    }

    &.collapsed {
        .chevron_up {
            display: none;
        }
        .chevron_down {
            display: block;
        }
        .section-body {
            display: none;
        }
    }

}
.hidden-grid-item {
    display: none
}

//don't have typeaheads cover other elements
.typeahead__query {
    z-index: 1 !important;
}

.assigned-to-row {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    .status-square {
        height: 13px;
        width: 13px;
        display: inline-block;
        border-radius: 2px;
    }
    > span {
        margin-right: 10px;
    }
}
.dt_user_select .typeahead__cancel-button {
    visibility: inherit;
    line-height: 1.5;
}

#tasks-modal {
  .existing-task-action {
    font-size: 10px;
    color: $primary-color;
    margin: 0 5px;
  }
}


.details-second-bar {
    span { font-size: 12px; }
    button, a {
        font-size: 12px;
    }
    .title {
        font-size: 15px
    }
    .record-name-tagline {
        font-size: 10px;
        display: inline-block;
        span, a {
            font-size: 10px;
            vertical-align: baseline;
            margin: 0;
        }
    }
    .dt-record-type-icon {
        height: 10px;
        width: 10px;
        vertical-align: baseline;
    }
    .control-buttons {
        grid-gap: 0.3em;
    }
    .details-bar-picture {
        vertical-align: middle;
        cursor: pointer;
    }
    img.details-bar-picture {
        min-width: 55px;
        width: 55px;
        height: 55px;
        border-radius: 5px;
        object-fit: cover;
    }
    i.details-bar-picture {
        font-size: 55px;
        height: 40px;
        opacity: 0.3;
        display: flex;
    }
    i.details-bar-picture::before {
        align-self: center;
    }
}
.is-stuck {
    #second-bar-small {
        img.details-bar-picture {
            min-width: 40px;
            width: 40px;
            height: 40px;
        }
        i.details-bar-picture {
            height: 40px;
            font-size: 40px;
        }
        border-top: .5rem solid $primary-color;
        .mobile-nav-actions {
            display: none;
        }
        #record-tagline {
            opacity:0;
            height: 0;
            display: none;
        }
    }
    .hide-on-scroll {
        display: none;
    }
}

#second-bar-small{
    border-top: none;
    #record-tagline {
        transition: all .3s;
        opacity:1;
    }
    .mobile-nav-actions {
        margin-bottom: 5px;
        grid-gap: 5px;
    }
}

//user select field
.dt_user_select {
    //margin-bottom:15px;
}

// link field
.add-link-dropdown {
    position: absolute;
    display: inline-block;
    margin: 0 5px;
}

.add-link-dropdown::before {
    content: "";
    position: absolute;
    width: 50px;
    height: 25px;
    transform: translate(-18px, -3px);
    cursor: pointer;
}

.add-link-dropdown__content {
  display: none;
  position: absolute;
  background-color: #fff;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  border: solid 1px #cacaca;
  z-index: 1;
  transform: translateX(-15%);
}
html[dir="rtl"] .add-link-dropdown__content {
  transform: translateX(15%);
}

.add-link-dropdown:hover .add-link-dropdown__content {
    display: block;
}

.add-link-dropdown__content:hover {
    display: block;
}

.add-link__option {
    padding: 5px 10px;
    cursor: pointer;
}

.add-link__option:hover {
    background-color: #3f729b;
    color: #fff;
}

.link-section .section-subheader {
    display: none;
}
/* ... */

